--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 /Week2/build/
 /StateCapitals2/nbproject/private/
 /StateCapitals2/build/
+/DvdLibrary/nbproject/private/
+/DvdLibrary/build/
+/DvdLibrary/dist/
+/Week 3/nbproject/private/
+/Week 3/build/
+/StatelessUnitTesting/nbproject/
+/StatelessUnitTesting/target/
+/Week 3/dist/
