Update Vending Machine

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /StatelessUnitTesting/nbproject/
 /StatelessUnitTesting/target/
 /Week 3/dist/
+/VendingMachine/nbproject/private/
+/VendingMachine/build/
+/VendingMachine/dist/
