Testing on Vending machine

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /VendingMachine/build/
 /VendingMachine/dist/
 /BookTracker/target/
+/jacvaAnt/nbproject/private/
+/VendingMachine_v2/target/
+/VendingMachine_v2/nbproject/
