--- a/jacvaAnt/nbproject/project.properties
+++ b/jacvaAnt/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/VendingMachine.jar
+dist.jar=${dist.dir}/jacvaAnt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/VendingMachine
+dist.jlink.output=${dist.jlink.dir}/jacvaAnt
 excludes=
 includes=**
 jar.compress=false
@@ -48,8 +48,7 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -71,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=VendingMachine
-main.class=vendingmachine.App
+jlink.launcher.name=jacvaAnt
+main.class=jacvaant.JacvaAnt
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
