flooring company add

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /jacvaAnt/nbproject/private/
 /VendingMachine_v2/target/
 /VendingMachine_v2/nbproject/
+/Flooring-Company/nbproject/private/
+/Flooring-Company/build/
