--- a/Flooring-Company/nbproject/project.properties
+++ b/Flooring-Company/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Flooring-Company
-main.class=flooring.company.FlooringCompany
+main.class=flooringcompany.app
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
